no venues found handler, no venue photo case, update README

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,12 @@
             </ul>
         </div>
     </div>
+
+    <template id="noVenuesItem">
+        <li class="card clearfix">
+            No Venues found. Please adjust your filters and try again
+        </li>
+    </template>
     <template id="venueItem">
         <li class="card clearfix">
             <div class="infoCol">
