remove bootstrap, adjust css classes

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foursquare</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
     <div class="resultContainer clearfix">
-        <div id="filtersView">
-            <ul id="filtersList">
+        <div class="filtersContainer">
+            <ul id="filtersList" class="filtersListBox">
                 <li>
                     <h4>Filters</h4>
                 </li>
@@ -52,8 +50,8 @@
                 </li>
             </ul>
         </div>
-        <div id="resultsView">
-            <ul id="recommendationsList">
+        <div class="resultsViewContainer">
+            <ul id="recommendationsList" class="recommendationsListBox">
             </ul>
         </div>
     </div>
