adjust TMPL variables names

--- a/src/index.html
+++ b/src/index.html
@@ -69,24 +69,24 @@
                         <div class="venueName">
                             <h4>
                                 <a href="VENUE_URL" target="_blank">
-                                    VENUE_NAME
+                                    TMPL_VENUE_NAME
                                 </a>
                             </h4>
                         </div>
                         <div class="venueMeta">
-                            <div class="venueScore" title="" style="background: VENUE_SCORE_COLOR">VENUE_SCORE</div>
+                            <div class="venueScore" title="" style="background: TMPL_VENUE_SCORE_COLOR">TMPL_VENUE_SCORE</div>
                             <div class="venueAddressData">
                                 <div class="venueAddress">
-                                    VENUE_ADDRESS
+                                    TMPL_VENUE_ADDRESS
                                 </div>
                                 <div class="venueData">
                                             <span class="venueDataItem">
-                                                <span class="categoryName">VENUE_CATEGORY</span>
+                                                <span class="categoryName">TMPL_VENUE_CATEGORY</span>
                                                 <span class="delim">&#183;</span>
                                             </span>
                                     <span class="venueDataItem">
                                         <span class="price" title="">
-                                            Price: VENUE_PRICE
+                                            Price: TMPL_VENUE_PRICE
                                         </span>
                                     </span>
                                 </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="photoCol">
                 <div class="photoContainer">
-                    <img class="photo" src="VENUE_PHOTO" width="300" height="300">
+                    <img class="photo" src="TMPL_VENUE_PHOTO" width="300" height="300">
                 </div>
             </div>
         </li>
